[metadata]
name = juliandate
version = 1.0.0
author = Sean Redmond
author_email = github-smr@sneakemail.com
description = Julian date conversions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/seanredmond/juliandate
project_urls =
    Bug Tracker = https://github.com/seanredmond/juliandate/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8

[options.entry_points]
console_scripts =
    jd = juliandate.jd:main

